--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,24 @@
 name: CI
+
 on:
- push:
-  branch: ["main"]
+  push:
+    branches: ["main"]
 
 jobs:
   build:
-   runs-build: "ubuntu-latest"
+    runs-on: ubuntu-latest
 
-   steps:
-    - name : Check out the code
-      uses: actions/checkout@v6
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v3
 
-    - name : node js setup 
-      uses : actions/setup-node@v6
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
 
-    - name : install 
-      run : npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name : runs 
-      run : node server.js
+      - name: Run server
+        run: node server.js
